# budgetbuddy

./: .env.example  .gitignore  .pre-commit-config.yaml  MIGRATION_add_external_fields.py  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: pre-commit.yml
alembic/: env.py
src/budgetbuddy/api/: app.py  deps.py
src/budgetbuddy/api/router/: transaction.py
src/budgetbuddy/api/routers/: transaction.py  transactions.py
src/budgetbuddy/api/schemas/: transaction.py  transactions.py
src/budgetbuddy/banking/bunq/: adapter.py  fetch.py  initialize_device.py  sync_service.py
src/budgetbuddy/banking/fetch/: initialize_device.py  main.py
src/budgetbuddy/db/: Dockerfile  __init__.py  config.py  create_tables.py  session.py
src/budgetbuddy/services/: transaction_service.py
src/common/log/: logger.py
src/db/: __init__.py  config.py  session.py
src/db/mixins/: auto_table.py  soft_delete.py
src/db/repository/: base.py
src/db/schema/: base.py  monetaryaccount.py  transaction.py
src/db/scripts/: create_tables.py  transaction_entry.py
tests/: conftest.py  pytest_configure.py
tests/budgetbuddy/: conftest.py
tests/budgetbuddy/api/: test_schemas.py  test_transaction.py
tests/budgetbuddy/banking/: __init__.py  conftest.py  test_adapter.py  test_bunq_client.py  test_sync_service.py
tests/budgetbuddy/db/: test_db.py  test_nullability_constraints.py
tests/budgetbuddy/services/: test_transaction_service.py
tests/common/log/: test_logger.py
tests/db/: test_db.py  test_nullability_constraints.py
(+14 files in other folders)
