[project]
name = "budgetbuddy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "camel-ai>=0.2.75",
    "dotenv>=0.9.9",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "bunq-sdk>=1.28.0",
    "fastapi>=0.118.0",
    "sqlalchemy>=2.0.43",
    "psycopg2-binary>=2.9.10",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.9"
]
