[project]
name = "budgetbuddy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "bunq-sdk>=1.28.0",
    "fastapi>=0.118.0",
    "sqlalchemy>=2.0.43",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.6.0",
    "pre-commit>=4.3.0",
    "httpx>=0.28.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.13.3",
    "pytest>=7.4",
    "pytest-env>=1.1.3",
    "mypy>=1.10",
    "alembic>=1.13",
    "testcontainers>=3.7.1",
]

[tool.ruff]
line-length = 120
target-version = "py312"
fix = true
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "UP", # pyupgrade
    "B", # flake8-bugbear
]
[tool.ruff.lint.per-file-ignores]
"src/**/routers/*.py" = ["B008"]
"src/**/api/*.py" = ["B008"]

[tool.pytest.ini_options]
env = [
    "PYTHONPATH=.:src",
    "ENV=testing",
    "DEBUG=true",
]
